add : funcionalidade de reserva e pagamento
