# src/domain/entities/Payment.ts
@@ -2,8 +2,8 @@ import { PaymentStatus } from '../enums/PaymentStatus';
 
 export interface Payment {
   id: string;
-  reservationId: string;
-  amount: number;
+  totalAmount: number;
+  payed: number;
   status: PaymentStatus;
   paidAt: string;
   createdAt: string;
