# src/domain/entities/Reservation.ts
@@ -1,15 +1,9 @@
-import { ReservationStatus } from '../enums/ReservationStatus';
-
 export interface Reservation {
   id: string;
   userId: string;
   spaceId: string;
-  startDate: string;
-  endDate: string;
-  checkInTime: string;
-  checkOutTime: string;
-  totalPrice: number;
-  status: ReservationStatus;
+  reservationDate: string;
+  paymentId?: string | null;
   createdAt: string;
   updatedAt: string;
 }
